--- a/templates/index.html
+++ b/templates/index.html
@@ -12,22 +12,18 @@
           <a href="#">Link 3</a>
         </div>
       </div>
-    <h1>Flight Board</h1>
+    <h1>Pets</h1>
     <table>
         <tr>
-            <th>Airline</th>
-            <th>Destination</th>
-            <th>DepartureTime</th>
-            <th>Gate</th>
+            <th>Name</th>
+            <th>Pets Name</th>
         </tr>
 
         
     {% for i in data %}
         <tr>
-        <td>{{ i.Airline }}</td>
-        <td>{{ i.Destination }}</td>
-        <td>{{ i.DepartureTime }}</td>
-        <td>{{ i.Gate }}</td>
+        <td>{{ i.user }}</td>
+        <td>{{ i.PetsName }}</td>
         </tr>
     {% endfor %}
         
