--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,11 @@
             >
                 Dropdown
             </button>
+            <!-- <div id="myDropdown" class="dropdown-content">
+                <a href="/filter/British Airways">British Airways</a>
+                <a href="/filter/Ryanair">Ryanair</a>
+                <a href="/filter/Easy Jet">Easy Jet</a>
+            </div> -->
             <div id="myDropdown" class="dropdown-content">
                 <a href="pets">Pets</a>
                 <a href="">Link 2</a>
@@ -23,5 +28,22 @@
             </div>
         </div>
         <!-- HTML CODE FOR TABLE GOES HERE -->
+        <table style="width: 100%">
+            <tr>
+                <th>Airline</th>
+                <th>Destination</th>
+                <th>DepartureTime</th>
+                <th>Gate</th>
+            </tr>
+            {% for i in data %}
+
+            <tr>
+                <td>{{ i.Airline }}</td>
+                <td>{{ i.Destination }}</td>
+                <td>{{ i.DepartureTime }}</td>
+                <td>{{ i.Gate }}</td>
+            </tr>
+            {% endfor %}
+        </table>
     </body>
 </html>
