--- a/templates/index.html
+++ b/templates/index.html
@@ -9,25 +9,7 @@
         <title>Flight Data</title>
     </head>
     <body>
-        <div class="dropdown">
-            <button
-                onclick="document.getElementById('myDropdown').classList.toggle('show');"
-                class="dropbtn"
-            >
-                Dropdown
-            </button>
-            <!-- <div id="myDropdown" class="dropdown-content">
-                <a href="/filter/British Airways">British Airways</a>
-                <a href="/filter/Ryanair">Ryanair</a>
-                <a href="/filter/Easy Jet">Easy Jet</a>
-            </div> -->
-            <div id="myDropdown" class="dropdown-content">
-                <a href="pets">Pets</a>
-                <a href="">Link 2</a>
-                <a href="">Link 3</a>
-            </div>
-        </div>
-        <!-- HTML CODE FOR TABLE GOES HERE -->
+        <!-- TABLE -->
         <table style="width: 100%">
             <tr>
                 <th>Airline</th>
@@ -45,5 +27,6 @@
             </tr>
             {% endfor %}
         </table>
+        <!--  -->
     </body>
 </html>
