--- a/static/styles.css
+++ b/static/styles.css
@@ -34,6 +34,10 @@ td {
     padding: 8px;
 }
 
+tr:nth-child(odd) {
+    background-color: #b6f0f0;
+}
+
 tr:nth-child(even) {
     background-color: #d6eeee;
 }
